firewallrules/secure-iptables-ip4
*filter
# Your Rules Here
#loopback rules
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
#ping rules
-A INPUT -p icmp -m state --state NEW --icmp-type 8 -j REJECT
-A INPUT -p icmp -m state --state ESTABLISHED,RELATED -j REJECT
-A OUTPUT -p icmp -j REJECT
#web rules
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 80 -j ACCEPT
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 443 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
#DNS rules
-A OUTPUT -p udp -o eth0 --dport 53 -j ACCEPT
-A INPUT -p udp -i eth0 --sport 53 -j ACCEPT 
#Time server rules
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED --dport 123 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 123 -j ACCEPT
#Printing rules
-A INPUT -p udp -m udp --dport 631 -j REJECT
-A INPUT -p tcp -m tcp --dport 631 -j REJECT
-A OUTPUT -p udp -m udp --sport 631 -j REJECT
-A OUTPUT -p tcp -m tcp --sport 631 -j REJECT
#Email rules
# IMAP
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 993 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 993 -j ACCEPT
# POP3
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 995 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 995 -j ACCEPT
# SMTP
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 465 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 465 -j ACCEPT
#SSH rules
# Input
-A INPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j REJECT
-A OUTPUT -p tcp -m state --state ESTABLISHED --sport 22 -j REJECT
# Output
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j REJECT
-A INPUT -p tcp -m state --state ESTABLISHED --sport 22 -j REJECT
#DHCP rules
-A INPUT -p udp -m state --state ESTABLISHED,RELATED --sport 67:68 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67:68 -j ACCEPT
#Everything else
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j REJECT

COMMIT
